objects/vlocity_cmt__DRMapItem__c.object
<CustomObject>
    <description>The Vlocity Data Mapper mapping item describes the transformation of one attribute from the source interface to a target attribute in the target interface or data object.</description>
    <fields>
        <fullName>vlocity_cmt__ConfigurationAttribute__c</fullName>
        <label>Configuration Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConfigurationCategory__c</fullName>
        <label>Configuration Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConfigurationGroup__c</fullName>
        <label>Configuration Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConfigurationKey__c</fullName>
        <label>Configuration Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConfigurationPattern__c</fullName>
        <label>Configuration Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConfigurationProcess__c</fullName>
        <label>Configuration Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConfigurationType__c</fullName>
        <label>Configuration Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConfigurationValue__c</fullName>
        <label>Configuration Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultValue__c</fullName>
        <label>Default Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplayType__c</fullName>
        <label>Display Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DomainObjectAPIName__c</fullName>
        <label>Domain Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DomainObjectCreationOrder__c</fullName>
        <label>Domain Object Creation Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DomainObjectFieldAPIName__c</fullName>
        <label>Domain Object Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DomainObjectFieldType__c</fullName>
        <label>Domain Object Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FilterGroup__c</fullName>
        <label>Filter Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FilterOperator__c</fullName>
        <label>Filter Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FilterValue__c</fullName>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FormulaConverted__c</fullName>
        <label>Formula Converted</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FormulaOrder__c</fullName>
        <label>Formula Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FormulaResultPath__c</fullName>
        <label>Formula Result Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Formula__c</fullName>
        <label>Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InterfaceFieldAPIName__c</fullName>
        <label>Interface Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InterfaceObjectLookupOrder__c</fullName>
        <label>Interface Object Lookup Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InterfaceObjectName__c</fullName>
        <label>Interface Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsRequiredForUpsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required For Upsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LinkCreatedField__c</fullName>
        <description>The field from the Creation Object to use. Required if using Link Creation Object.</description>
        <label>Link Created Domain Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LinkCreatedIndex__c</fullName>
        <label>Link Domain Object Creation Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LookupDomainObjectFieldName__c</fullName>
        <label>Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LookupDomainObjectName__c</fullName>
        <label>Lookup Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LookupDomainObjectRequestedFieldName__c</fullName>
        <label>Lookup Requested Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MapId__c</fullName>
        <externalId>true</externalId>
        <label>DR Map Id (Unique)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OMplusSyncEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable OM+ sync for this object</description>
        <inlineHelpText>Enables or disables synchronization to OM+. Value is set by associated DRBundle.</inlineHelpText>
        <label>OM Plus Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TransformValuesMap__c</fullName>
        <label>TransformValuesMap</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UpsertKey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this field as a lookup to get first instance when found. Not required to be an External Id.</description>
        <label>Upsert Key</label>
        <type>Checkbox</type>
    </fields>
    <label>Vlocity Data Mapper Map Item</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>vlocity_cmt__MapId__c</columns>
        <columns>vlocity_cmt__InterfaceObjectName__c</columns>
        <columns>NAME</columns>
        <columns>vlocity_cmt__InterfaceFieldAPIName__c</columns>
        <columns>vlocity_cmt__DomainObjectCreationOrder__c</columns>
        <columns>vlocity_cmt__DomainObjectAPIName__c</columns>
        <columns>vlocity_cmt__DomainObjectFieldAPIName__c</columns>
        <columns>vlocity_cmt__LinkCreatedIndex__c</columns>
        <columns>vlocity_cmt__UpsertKey__c</columns>
        <columns>vlocity_cmt__LinkCreatedField__c</columns>
        <columns>vlocity_cmt__LookupDomainObjectName__c</columns>
        <columns>vlocity_cmt__LookupDomainObjectFieldName__c</columns>
        <columns>vlocity_cmt__LookupDomainObjectRequestedFieldName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Map Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Data Mapper Map Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>